<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spm_blue_40"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/white_all_round"
            android:elevation="10sp"
            android:paddingLeft="20dp"
            android:paddingTop="6dp"
            android:paddingRight="20dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/spm_blue_40"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_top_round"
        android:elevation="10sp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserIdLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@drawable/white_all_round_blue_border"
            android:elevation="4sp"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:padding="15sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@drawable/white_all_round_blue_border"
            android:elevation="4sp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="15sp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:elevation="10sp"
            android:onClick="doLogin"
            android:paddingLeft="30sp"
            android:paddingTop="0dp"
            android:paddingRight="30sp"
            android:paddingBottom="0dp"
            android:text="@string/login"
            app:cornerRadius="20sp" />

        <Button
            android:id="@+id/btnNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15sp"
            android:onClick="goToCreateAccount"
            android:background="@drawable/spm_blue_30_left_round"
            android:text="New User" />
    </LinearLayout>
</LinearLayout>