<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OfficerDashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spm_blue_30_bottom_round"
        android:elevation="5sp"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingTop="35sp"
        android:paddingRight="20sp"
        android:paddingBottom="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnODMenuBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@null"
                app:srcCompat="@drawable/icon_menu_bar" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_weight="0"
                android:text="@string/tpo_dashboard"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_heading" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="5sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5sp"
                android:text="Student Placement System"
                android:textColor="#B2FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="160sp"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:background="@drawable/spm_blue_20_all_round"
                android:elevation="5sp"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spm_blue_30_all_round"
                    android:paddingLeft="25sp"
                    android:paddingTop="6sp"
                    android:paddingRight="25sp"
                    android:paddingBottom="6sp"
                    android:text="@string/students"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />

                <TextView
                    android:id="@+id/tvODStudentCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="160sp"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:background="@drawable/spm_blue_20_all_round"
                android:elevation="5sp"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spm_blue_30_all_round"
                    android:paddingLeft="25sp"
                    android:paddingTop="6sp"
                    android:paddingRight="25sp"
                    android:paddingBottom="6sp"
                    android:text="@string/company"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />

                <TextView
                    android:id="@+id/tvODCompanyCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_title" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="160sp"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:background="@drawable/spm_blue_20_all_round"
                android:elevation="5sp"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spm_blue_30_all_round"
                    android:paddingLeft="25sp"
                    android:paddingTop="6sp"
                    android:paddingRight="25sp"
                    android:paddingBottom="6sp"
                    android:text="@string/jobs"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />

                <TextView
                    android:id="@+id/tvODJobsCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="160sp"
                android:layout_height="match_parent"
                android:layout_margin="15sp"
                android:background="@drawable/spm_blue_20_all_round"
                android:elevation="5sp"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spm_blue_30_all_round"
                    android:paddingLeft="25sp"
                    android:paddingTop="6sp"
                    android:paddingRight="25sp"
                    android:paddingBottom="6sp"
                    android:text="@string/coming_soon"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title" />

                <TextView
                    android:id="@+id/tvODComingSoonCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_title" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/spm_blue_40_all_round"
            android:elevation="5sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="6sp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spm_blue_20_all_round"
                android:padding="5sp"
                android:text="@string/selected_students"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/title" />

            <TextView
                android:id="@+id/tvODSelectedStudentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sub_title" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/upcoming_jobs"
            android:textColor="@color/black"
            android:textSize="@dimen/main_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_OD_upcoming_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="15sp"
            android:padding="5sp"
            android:scrollbarSize="0dp" />
    </LinearLayout>

</LinearLayout>